--- a/style.css
+++ b/style.css
@@ -3,14 +3,14 @@
 
 /* ========== ROOT VARAIBLES ========== */
 :root {
-    --color-dark: hsl(252, 30%, 100%);
-    --color-white: hsl(252, 30%, 95%);
-    --color-light: hsl(252, 15%, 65%);
-    --color-gray: hsl(252, 75%, 60%);
-    --color-primary: hsl(252, 100%, 90%);
-    --color-secondary: hsl(120, 95%, 90%);
-    --color-success: hsl(0, 95%, 65%);
-    --color-danger: hsl(252, 30%, 17%);
+    --color-white: hsl(252, 30%, 100%);
+    --color-light: hsl(252, 30%, 95%);
+    --color-gray: hsl(252, 15%, 65%);
+    --color-primary: hsl(252, 75%, 60%);
+    --color-secondary: hsl(252, 100%, 90%);
+    --color-success: hsl(120, 95%, 65%);
+    --color-danger: hsl(0, 95%, 65%);
+    --color-dark: hsl(252, 30%, 17%);
     --color-black: hsl(252, 30%, 10%);
 
     --border-radius: 2rem;
@@ -18,6 +18,9 @@
     --btn-padding: 0.6rem 2rem;
     --search-padding:  0.6rem 1rem;
     --card-padding: 1rem;
+
+    --sticky-top-left: 5.4rem;
+    --sticky-top-right: -18rem;
 
     --transition: all 300ms ease;
 }
@@ -132,4 +135,151 @@ nav .create {
     display: flex;
     align-items: center;
     gap: 2rem;
+}
+
+/* ========== MAIN ========== */
+
+main {
+    position: relative;
+    top: 5.4rem;
+}
+
+main .container {
+    display: grid;
+    grid-template-columns: 18vw auto 20vw;
+    gap: 2rem;
+    position: relative;
+}
+
+/* ========== LEFT SIDEBAR ========== */
+main .container .left {
+    height: max-content;
+    position: sticky;
+    top: var(--sticky-top-left);
+}
+
+main .container .left .profile {
+    padding: var(--card-padding);
+    background: var(--color-white);
+    display: flex;
+    border-radius: var(--card-border-radius);
+    align-items: center;
+    column-gap: 1rem;
+    width: 100%;
+}
+
+main .container .left .sidebar {
+    margin-top: 1rem;
+    background: var(--color-white);
+    border-radius: var(--card-border-radius);
+}
+
+main .container .menu-item {
+    display: flex;
+    align-items: center;
+    height: 4rem;
+    cursor: pointer;
+    transition: var(--transition);
+    position: relative;
+}
+
+
+main .container .menu-item:hover {
+    background-color: var(--color-light);
+}
+
+.left .sidebar i {
+    font: 1.4rem;
+    color: var(--color-gray);
+    margin-left: 2rem;
+    position: relative;
+}
+
+.left .sidebar i .notification-count {
+    background: var(--color-danger);
+    columns: var(--color-white);
+    font-size: 0.7rem;
+    width: fit-content;
+    border-radius: 0.8rem;
+    padding: 0.1rem 0.4rem;
+    position: absolute;
+    top: -0.2rem;
+    right: -0.3rem;
+}
+
+.left .sidebar h3 {
+    margin-left: 1.5rem;
+    font-size: 1rem;
+}
+
+.left .sidebar .active {
+    background: var(--color-light);
+}
+
+.left .sidebar .active i,
+.left .sidebar .active h3 {
+    color: var(--color-white);
+}
+
+.left .sidebar .active::before {
+    content: '';
+    display: block;
+    width: 0.5rem;
+    height: 100%;
+    position: absolute;
+    background: var(--color-primary);
+}
+
+.left .sidebar .menu-item:first-child.active {
+    border-top-left-radius: var(--card-border-radius);
+    overflow: hidden;
+}
+
+.left .sidebar .menu-item:last-child.active {
+    border-bottom-left-radius: var(--card-border-radius);
+    overflow: hidden;
+}
+
+.left .btn {
+    margin-top: 1rem;
+    width: 100%;
+    text-align: center;
+    padding: 1rem 0;
+}
+
+/* ========== NOTIFICATIONS POPUP ========== */
+.left .notifications-popup {
+    position: absolute;
+    top: 0;
+    left: 110%;
+    width: 30rem;
+    background: var(--color-white);
+    border-radius: var(--card-border-radius);
+    padding: var(--card-padding);
+    box-shadow: 0 0 2rem hsl(var(--color-primary), 75%, 60%, 25%);
+    z-index: 8;
+    display: none;
+}
+
+.left .notifications-popup::before {
+    content: '';
+    width: 1.2rem;
+    height: 1.2rem;
+    display: block;
+    background: var(--color-white);
+    position: absolute;
+    left: -0.6rem;
+    transform: rotate(45deg);
+}
+
+
+.left .notifications-popup > div {
+    display: flex;
+    align-items: start;
+    gap: 1rem;
+    margin-bottom: 1rem;
+}
+
+.left .notifications-popup small {
+    display: block;
 }
