--- a/style.css
+++ b/style.css
@@ -4,11 +4,12 @@
 /* ========== ROOT VARAIBLES ========== */
 :root {
     --color-white: hsl(252, 30%, 100%);
-    --color-wheat: rgb(143, 122, 30);
+    --color-wheat: rgb(5, 96, 99);
     --color-light: hsl(252, 30%, 95%);
     --color-gray: hsl(252, 15%, 65%);
     --color-primary: hsl(252, 75%, 60%);
     --color-secondary: hsl(252, 100%, 90%);
+    --color-messages: rgb(4, 131, 4);
     --color-success: hsl(120, 95%, 65%);
     --color-danger: hsl(0, 95%, 65%);
     --color-dark: hsl(252, 30%, 17%);
@@ -114,13 +115,13 @@ nav .container {
     justify-content: space-between;
 }
 
-nav .search-bar {
+.search-bar {
     background: var(--color-light);
     border-radius: var(--border-radius);
     padding: var(--search-padding);
 }
 
-nav .search-bar input[type="search"] {
+.search-bar input[type="search"] {
     background: transparent;
     width: 30vw;
     margin-left: 1rem;
@@ -128,7 +129,7 @@ nav .search-bar input[type="search"] {
     color: var(--color-dark);
 }
 
-nav .search-bar input[type="search"]::placeholder {
+.search-bar input[type="search"]::placeholder {
     color: var(--color-gray);
 }
 
@@ -190,22 +191,29 @@ main .container .menu-item:hover {
 }
 
 .left .sidebar i {
-    font: 1.4rem;
+    font-size: 1.4rem;
     color: var(--color-gray);
     margin-left: 2rem;
     position: relative;
 }
 
-.left .sidebar i .notification-count {
+.left .sidebar i .notification-count,
+.left .sidebar i .messages-count {
     background: var(--color-danger);
-    columns: var(--color-white);
+    color: var(--color-white);
     font-size: 0.7rem;
     width: fit-content;
     border-radius: 0.8rem;
-    padding: 0.1rem 0.4rem;
+    padding: 0 0.3rem;
     position: absolute;
     top: -0.2rem;
     right: -0.3rem;
+}
+
+.left .sidebar i .messages-count {
+    background: var(--color-messages);
+    padding-left: 0.3rem;
+    padding-right: 0.5rem;
 }
 
 .left .sidebar h3 {
@@ -242,7 +250,7 @@ main .container .menu-item:hover {
 }
 
 .left .btn {
-    margin-top: 1rem;
+    /* margin-top: 1rem; */
     width: 100%;
     text-align: center;
     padding: 1rem 0;
@@ -388,6 +396,13 @@ main .container .menu-item:hover {
     margin: 0.6rem;
 }
 
+.middle .feed .action-buttons .interaction-buttons span i,
+.middle .feed .head span i,
+.middle .feed .comments,
+.middle .feed .action-buttons .bookmark span i {
+    cursor: pointer;
+}
+
 .middle .liked-by {
     display: flex;
 }
@@ -410,4 +425,119 @@ main .container .menu-item:hover {
     margin-left: 0.5rem;
 }
 
-/* ========== FEEDS ========== */
+/* ========== RIGHT ========== */
+main .container .right {
+    height: max-content;
+    position: sticky;
+    top: var(--sticky-top-right);
+    bottom: 0;
+}
+
+.right .messages {
+    background: var(--color-white);
+    border-radius: var(--card-border-radius);
+    padding: var(--card-padding);
+}
+
+.right .messages .heading h4{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 1rem;
+    color: var(--color-gray);
+}
+
+.right .messages i {
+    font-size: 1.4rem;
+}
+
+.right .messages .search-bar {
+    display: flex;
+    margin-bottom: 1rem;
+}
+
+.right .messages .category {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 1rem;
+}
+
+.right .messages .category h6 {
+    width: 100%;
+    text-align: center;
+    border-bottom: 4px solid var(--color-light);
+    padding-bottom: 0.5rem;
+    font-size: 0.85rem;
+}
+
+.right .messages .category .active {
+    border-color: var(--color-dark);
+}
+
+.right .messages .message-requests {
+    color: var(--color-primary);
+}
+
+.right .messages .message {
+    display: flex;
+    gap: 1rem;
+    margin-bottom: 1rem;
+    align-items: start;
+}
+
+.right .message .profile-photo {
+    position: relative;
+    overflow: visible;
+}
+
+.right .profile-photo img {
+    border-radius: 50%;
+}
+
+.right .messages .message:last-child {
+    margin: 0;
+}
+
+.right .messages .message p {
+    font-size: 0.8rem;
+}
+
+.right .messages .message .profile-photo .active {
+    width: 0.8rem;
+    height: 0.8rem;
+    border-radius: 50%;
+    border: 3px solid var(--color-white);
+    background: var(--color-success);
+    position: absolute;
+    bottom: 0;
+    right: 0;
+}
+
+
+/* ========== FRIEND REQUESTS ========== */
+.right .frend-requests {
+    margin-top: 1rem;
+}
+
+.right .friend-requests h4 {
+    color: var(--color-gray);
+    margin: 1rem 0;
+}
+
+.right .request {
+    background: var(--color-white);
+    padding: var(--card-padding);
+    border-radius: var(--card-border-radius);
+    margin-bottom: 0.7rem;
+}
+
+.right .request .info {
+    display: flex;
+    gap: 1rem;
+    margin-bottom: 1rem;
+}
+
+.right .request .action {
+    display: flex;
+    gap: 1rem;
+}
